# VPN_forClients

./: .env.example  .gitignore  BOT_ARCHITECTURE.md  README.md  pyproject.toml
apps/backend/app/backend_app/: dependencies.py  jobs.py  main.py
apps/backend/app/backend_app/api/routes/: health.py  internal.py  webhooks.py
apps/backend/app/backend_app/core/: __init__.py  config.py  logging.py
apps/backend/app/backend_app/services/: application.py  payments.py  security.py  telegram.py
apps/bot/app/bot_app/: __init__.py  main.py
docs/: wireguard-node-setup.md
infra/nginx/: vpn-platform.conf
infra/systemd/: backend.service  bot.service  subscription-cleanup.service  subscription-cleanup.timer
scripts/: wg-add-client.sh  wg-disable-client.sh  wg-remove-client.sh
tests/: test_domain_logic.py  test_security.py
