[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-for-clients"
version = "0.1.0"
description = "Telegram VPN platform monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.8,<4.0",
  "alembic>=1.13,<2.0",
  "asyncpg>=0.29,<0.30",
  "asyncssh>=2.14,<3.0",
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<0.28",
  "pydantic-settings>=2.3,<3.0",
  "python-json-logger>=2.0,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<0.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.24",
]

[tool.setuptools.packages.find]
where = [
  "apps/backend/app",
  "apps/bot/app",
  "packages/domain/src",
  "packages/db/src",
  "packages/vpn/src",
]
include = [
  "backend_app*",
  "bot_app*",
  "domain*",
  "db*",
  "vpn*",
]

[tool.pytest.ini_options]
pythonpath = [
  "apps/backend/app",
  "apps/bot/app",
  "packages/domain/src",
  "packages/db/src",
  "packages/vpn/src",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
